section advantages, bg of section consultation, add scss files in folder blcks (heading, span)

--- a/src/index.html
+++ b/src/index.html
@@ -61,5 +61,48 @@
         </div>
         </div>
     </section>
+    <section class="advantages">
+        <div class="container">
+            <h2 class="heading heading-advantagesh2">наши преимущества</h2>
+            <div class="advantages__wrapper">
+                <div class="advantages__wrapper-promo">
+                    <div>
+                        <img src="icons/cup.png" alt="Превый логотип (кубок)">
+                    </div>
+                    <h3 class="heading heading-advantagesh3">Делимся опытом</h3>
+                    <div class="advantages__wrapper-promo_text">
+                        <p>
+                            Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                        </p>
+                    </div>
+                </div>
+                <div class="advantages__wrapper-promo">
+                    <div><img src="icons/heart.png" alt="Второй логотип (сердце)"></div>
+                    <h3 class="heading heading-advantagesh3">Заботимся о здоровье</h3>
+                    <div class="advantages__wrapper-promo_text">
+                        <p>
+                            Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                        </p>
+                    </div>
+                </div>
+                <div class="advantages__wrapper-promo">
+                    <div><img src="icons/shoe.png" alt="Третий логотип (сердце)"></div>
+                    <h3 class="heading heading-advantagesh3">Учим бегать</h3>
+                    <div class="advantages__wrapper-promo_text">
+                        <p>
+                            Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <span>I LOVE RUNNING</span>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="consultation">
+        <div class="container">
+            <h2></h2>
+            <h3></h3>
+
+        </div>
+    </section>
 </body>
 </html>
