--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>pulse</title>
-    <link rel="stylesheet" href="sass/libs/bootstrap-reboot.min.scss">
     <link rel="stylesheet" href="sass/libs/_font.scss">
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -99,10 +100,66 @@
     </section>
     <section class="consultation">
         <div class="container">
-            <h2></h2>
-            <h3></h3>
+            <h2 class="heading heading-consultation">Получите бесплатную консультацию<br>по подбору пульсометра </h2>
+            <div class="subheading">Просто заполните форму заявки<br>и мы перезвоним вам в течении 10 минут</div>
+            <form id="consultation-form" class="feed-form" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон">
+                <input name="email" required placeholder="Ваш E-mail" type="text">
 
+                <button class="buttons buttons-consultation">заказать консультацию</button>
+            </form>
         </div>
     </section>
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div>
+                    <img src="img/slide1.png" alt="">
+                </div>
+                <div>
+                    <img src="img/slide2.png" alt="">
+                </div>
+                <div>
+                    <img src="img/slide3.png" alt="">
+                </div>
+              </div>
+        </div>
+    </section>
+    <section class="catalog">
+        <div class="container">
+            <h2></h2>
+            <ul class="catalog__tabs">
+                <li class="catalog__tab"><div>Для фитнеса</div></li>
+                <li class="catalog__tab"><div>для бега</div></li>
+                <li class="catalog__tab"><div>для триатлона</div></li>
+            </ul>
+
+            <div class="catalog__content">
+                <div class="catalog-item">
+                    <div class="catalog-item_wrapper">
+                        <div class="catalog-item_content">
+                            <img src="img/pulseFT1.png" alt="">
+                            <div class="catalog-item__subtitle"></div>
+                            <div class="catalog-item__descr"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <a href="#up" class="pageup">
+        <img src="icons/up.svg" alt="up">
+    </a>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
